--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <title>Budget application</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Playfair+Display&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.css">
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="https://kit.fontawesome.com/20b7c06391.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify"></script>
     </head>
 
     <body>
